--- a/CyborgBattle/CyborgBattle.vcxproj.filters
+++ b/CyborgBattle/CyborgBattle.vcxproj.filters
@@ -51,6 +51,9 @@
     <ClCompile Include="entity.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="livingEntity.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="cleanup.h">
@@ -102,6 +105,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="entity.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="livingEntity.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
