--- a/CyborgBattle/CyborgBattle.vcxproj
+++ b/CyborgBattle/CyborgBattle.vcxproj
@@ -215,11 +215,13 @@ xcopy /Y /I "$(ProjectDir)assets" "$(OutDir)assets"</Command>
     <ClCompile Include="globals.cpp" />
     <ClCompile Include="groupBuilder.cpp" />
     <ClCompile Include="hero.cpp" />
+    <ClCompile Include="keyboardInput.cpp" />
     <ClCompile Include="livingEntity.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="randomNumber.cpp" />
     <ClCompile Include="assetPath.cpp" />
     <ClCompile Include="timeController.cpp" />
+    <ClCompile Include="wall.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="animation.h" />
@@ -237,10 +239,12 @@ xcopy /Y /I "$(ProjectDir)assets" "$(OutDir)assets"</Command>
     <ClInclude Include="groupPosition.h" />
     <ClInclude Include="groupString.h" />
     <ClInclude Include="hero.h" />
+    <ClInclude Include="keyboardInput.h" />
     <ClInclude Include="livingEntity.h" />
     <ClInclude Include="randomNumber.h" />
     <ClInclude Include="assetPath.h" />
     <ClInclude Include="timeController.h" />
+    <ClInclude Include="wall.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
