Create main game class that contains all the global logic.

--- a/CyborgBattle/CyborgBattle.vcxproj
+++ b/CyborgBattle/CyborgBattle.vcxproj
@@ -212,6 +212,7 @@ xcopy /Y /I "$(ProjectDir)assets" "$(OutDir)assets"</Command>
     <ClCompile Include="drawing.cpp" />
     <ClCompile Include="entity.cpp" />
     <ClCompile Include="frame.cpp" />
+    <ClCompile Include="game.cpp" />
     <ClCompile Include="globals.cpp" />
     <ClCompile Include="groupBuilder.cpp" />
     <ClCompile Include="hero.cpp" />
@@ -231,6 +232,7 @@ xcopy /Y /I "$(ProjectDir)assets" "$(OutDir)assets"</Command>
     <ClInclude Include="drawing.h" />
     <ClInclude Include="entity.h" />
     <ClInclude Include="frame.h" />
+    <ClInclude Include="game.h" />
     <ClInclude Include="globals.h" />
     <ClInclude Include="group.h" />
     <ClInclude Include="groupBox.h" />
