--- a/CyborgBattle/CyborgBattle.vcxproj.filters
+++ b/CyborgBattle/CyborgBattle.vcxproj.filters
@@ -87,6 +87,9 @@
     <ClCompile Include="wall.cpp">
       <Filter>Source Files\Entities</Filter>
     </ClCompile>
+    <ClCompile Include="game.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="group.h">
@@ -151,6 +154,9 @@
     </ClInclude>
     <ClInclude Include="wall.h">
       <Filter>Header Files\Entities</Filter>
+    </ClInclude>
+    <ClInclude Include="game.h">
+      <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
