--- a/CyborgBattle/CyborgBattle.vcxproj.filters
+++ b/CyborgBattle/CyborgBattle.vcxproj.filters
@@ -93,6 +93,9 @@
     <ClCompile Include="glob.cpp">
       <Filter>Source Files\Entities</Filter>
     </ClCompile>
+    <ClCompile Include="soundManager.cpp">
+      <Filter>Source Files\Utilities</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="group.h">
@@ -163,6 +166,9 @@
     </ClInclude>
     <ClInclude Include="glob.h">
       <Filter>Header Files\Entities</Filter>
+    </ClInclude>
+    <ClInclude Include="soundManager.h">
+      <Filter>Header Files\Utilities</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
